fix: card overflow

--- a/Presentation/Flipard.MVC/wwwroot/css/flashcards/display-page.css
+++ b/Presentation/Flipard.MVC/wwwroot/css/flashcards/display-page.css
@@ -76,7 +76,7 @@
     background-color: var(--card-bg-color);
     border-radius: 10px;
     width: 400px;
-    height: 350px;
+    height: 380px;
     box-shadow: 0 2px 4px var(--card-dark-shadow-color);
     transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
     transform-style: preserve-3d;
@@ -92,13 +92,16 @@
     }
 
 .current-card .term, .current-card .meaning {
-    width: 100%;
-    height: 95%;
+    width: 360px;
+     height: 100%; 
     backface-visibility: hidden;
-    overflow: auto;
-    padding: 20px;
+    overflow-y: auto;
+    margin: 1rem;
     position: absolute;
     text-align: center;
+    max-height: 350px;
+    scrollbar-width: none;
+    align-content: center; /*for centering text, long text may malfunctioned*/
 }
 
 .current-card .meaning {
